--- a/static/prism.css
+++ b/static/prism.css
@@ -25,7 +25,7 @@ pre[class*="language-"] {
 	-ms-hyphens: none;
 	hyphens: none;
 	white-space: pre;
-	white-space: pre-wrap;
+	/* white-space: pre-wrap; */
 	word-break: break-all;
 	word-wrap: break-word;
 	background: #322931;
