--- a/src/lib/components/range.scss
+++ b/src/lib/components/range.scss
@@ -7,7 +7,7 @@ $thumb-border-width: 0 !default;
 $thumb-border-color: #000 !default;
 $thumb-shadow-size: 3px !default;
 $thumb-shadow-blur: 4px !default;
-$thumb-shadow-color: rgb(0, 0, 0, .5) !default;
+$thumb-shadow-color: rgb(0, 0, 0, 0.5) !default;
 
 // The range
 $track-color: grey !default;
@@ -18,100 +18,101 @@ $track-border-width: 0 !default;
 $track-border-color: #000 !default;
 $track-shadow-size: 2px !default;
 $track-shadow-blur: 2px !default;
-$track-shadow-color: rgba(0, 0, 0, .25) !default;
+$track-shadow-color: rgba(0, 0, 0, 0.25) !default;
 
 @mixin shadow($shadow-size, $shadow-blur, $shadow-color) {
-  box-shadow: $shadow-size $shadow-size $shadow-blur $shadow-color, 0 0 $shadow-size lighten($shadow-color, 5%);
+	box-shadow: $shadow-size $shadow-size $shadow-blur $shadow-color,
+		0 0 $shadow-size lighten($shadow-color, 5%);
 }
 
 @mixin track {
-  width: $track-width;
-  height: $track-height;
-  cursor: pointer;
-  animation: 0.2s;
+	width: $track-width;
+	height: $track-height;
+	cursor: pointer;
+	animation: 0.2s;
 }
 
 @mixin thumb {
-  @include shadow($thumb-shadow-size, $thumb-shadow-blur, $thumb-shadow-color);
-  width: $thumb-width;
-  height: $thumb-height;
-  cursor: pointer;
-  border: $thumb-border-width solid $thumb-border-color;
-  border-radius: $thumb-radius;
-  background: $thumb-color;
+	@include shadow($thumb-shadow-size, $thumb-shadow-blur, $thumb-shadow-color);
+	width: $thumb-width;
+	height: $thumb-height;
+	cursor: pointer;
+	border: $thumb-border-width solid $thumb-border-color;
+	border-radius: $thumb-radius;
+	background: $thumb-color;
 }
 
 @mixin input-type-range {
-  -webkit-appearance: none;
-  width: $track-width;
-  background: transparent;
+	-webkit-appearance: none;
+	width: $track-width;
+	background: transparent;
 
-  &:focus {
-    outline: none;
-  }
+	&:focus {
+		outline: none;
+	}
 
-  &::-webkit-slider-runnable-track {
-    @include track;
-    @include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
-    border: $track-border-width solid $track-border-color;
-    border-radius: $track-radius;
-    background: $track-color;
-  }
+	&::-webkit-slider-runnable-track {
+		@include track;
+		@include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
+		border: $track-border-width solid $track-border-color;
+		border-radius: $track-radius;
+		background: $track-color;
+	}
 
-  &::-webkit-slider-thumb {
-    @include thumb;
-    -webkit-appearance: none;
-    //margin-top: ((-2 * #{$track-border-width}) + $track-height) / (2 - $thumb-height / 2);
+	&::-webkit-slider-thumb {
+		@include thumb;
+		-webkit-appearance: none;
+		//margin-top: ((-2 * #{$track-border-width}) + $track-height) / (2 - $thumb-height / 2);
 		margin-top: -4px;
-  }
+	}
 
-  &:focus::-webkit-slider-runnable-track {
-    background: $track-color;
-  }
+	&:focus::-webkit-slider-runnable-track {
+		background: $track-color;
+	}
 
-  &::-moz-range-track {
-    @include track;
-    @include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
-    border: $track-border-width solid $track-border-color;
-    border-radius: $track-radius;
-    background: $track-color;
-  }
+	&::-moz-range-track {
+		@include track;
+		@include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
+		border: $track-border-width solid $track-border-color;
+		border-radius: $track-radius;
+		background: $track-color;
+	}
 
-  &::-moz-range-thumb {
-    @include thumb;
-  }
+	&::-moz-range-thumb {
+		@include thumb;
+	}
 
-  &::-ms-track {
-    @include track;
-    color: transparent;
-    border-width: $thumb-width 0;
-    border-color: transparent;
-    background: transparent;
-  }
+	&::-ms-track {
+		@include track;
+		color: transparent;
+		border-width: $thumb-width 0;
+		border-color: transparent;
+		background: transparent;
+	}
 
-  &::-ms-fill-lower {
-    @include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
-    border: $track-border-width solid $track-border-color;
-    border-radius: $track-radius * 2;
-    background: $track-color;
-  }
+	&::-ms-fill-lower {
+		@include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
+		border: $track-border-width solid $track-border-color;
+		border-radius: $track-radius * 2;
+		background: $track-color;
+	}
 
-  &::-ms-fill-upper {
-    @include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
-    border: $track-border-width solid $track-border-color;
-    border-radius: $track-radius * 2;
-    background: $track-color;
-  }
+	&::-ms-fill-upper {
+		@include shadow($track-shadow-size, $track-shadow-blur, $track-shadow-color);
+		border: $track-border-width solid $track-border-color;
+		border-radius: $track-radius * 2;
+		background: $track-color;
+	}
 
-  &::-ms-thumb {
-    @include thumb;
-  }
+	&::-ms-thumb {
+		@include thumb;
+	}
 
-  &:focus::-ms-fill-lower {
-    background: $track-color;
-  }
+	&:focus::-ms-fill-lower {
+		background: $track-color;
+	}
 
-  &:focus::-ms-fill-upper {
-    background: $track-color;
-  }
+	&:focus::-ms-fill-upper {
+		background: $track-color;
+	}
 }
