--- a/src/lib/styles/app.sass
+++ b/src/lib/styles/app.sass
@@ -1,3 +1,5 @@
+@import './globals'
+
 html,
 body
 	overflow-x: hidden
@@ -19,3 +21,10 @@ button
 .center-content
 	display: grid
 	place-items: center
+
+*
+	outline-color: $accent-color
+
+button
+	border: none
+	background: transparent
