--- a/src/lib/styles/globals.sass
+++ b/src/lib/styles/globals.sass
@@ -7,5 +7,11 @@ $footer-height: 110px
 
 $hidden-player-height: 36px
 
+$breakpoint: 700px
+
 @mixin drop-shadow
 	box-shadow: 0 2px 3px 3px rgba(0, 0, 0, 0.03)
+
+@mixin center-content
+	display: grid
+	place-content: center
